--- a/algorithms_hw1_vanessa.ipynb
+++ b/algorithms_hw1_vanessa.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,10 +30,10 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "3.5"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,9 +45,9 @@
     "    list_sum = 0\n",
     "    list_count = 0\n",
     "    for i in n:\n",
-    "        list_sum = list_sum + i\n",
-    "        list_count = list_count + 1\n",
-    "    return list_sum/list_count\n",
+    "        list_sum = list_sum + i # list_sum += i\n",
+    "        list_count = list_count + 1 # list_count += 1\n",
+    "    return list_sum/float(list_count)\n",
     "average(n)"
    ]
   },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -70,8 +70,8 @@
      "output_type": "stream",
      "text": [
       "Enter your name: Vanessa\n",
-      "Enter your location: Uni\n",
-      "Sorry Vanessa I was late at the Uni because we had some meetings at Gracie Mansion and that's the full story: http://www.dnainfo.com/new-york/20150307/belle-harbor/de-blasio-30-minutes-late-rockaway-st-patricks-day-parade\n"
+      "Enter your location: Columbia\n",
+      "Sorry Vanessa, I was late at Columbia because we had some stuff we had to do and that's the full story: http://www.dnainfo.com/new-york/20150307/belle-harbor/de-blasio-30-minutes-late-rockaway-st-patricks-day-parade\n"
      ]
     }
    ],
@@ -81,17 +81,12 @@
     "myfile = open(\"excuse.csv\", 'rU')\n",
     "excuses = list(csv.DictReader(myfile))\n",
     "\n",
-    "#def excuse(name, location):\n",
-    " #   return \"Sorry \" + name + \" I was late to \" + location + \" to meet you \" + line[\"excuse\"]\n",
-    "#print excuse(\"Vanessa\", \"Paris\")\n",
-    "    \n",
-    "    \n",
     "name = raw_input(\"Enter your name: \")\n",
     "location = raw_input(\"Enter your location: \")\n",
     "\n",
     "def excuse(name, location):\n",
     "   random_excuse = random.choice(excuses)\n",
-    "   return \"Sorry \"+ name +\" I was late at the \"+ location+ \" because \"+ random_excuse[\"excuse\"]+\" and that's the full story: \"+ random_excuse[\"hyperlink\"]  \n",
+    "   return \"Sorry \"+ name +\", I was late at \"+ location+ \" because \"+ random_excuse[\"excuse\"]+\" and that's the full story: \"+ random_excuse[\"hyperlink\"]  \n",
     "print excuse(name, location)"
    ]
   },
@@ -104,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 5, 13, 23, 37, 47, 61, 73, 89]\n"
+      "[1, 3, 7, 13, 19, 29, 37, 43, 53, 61, 71, 79, 89]\n"
      ]
     }
    ],
@@ -126,33 +121,8 @@
     "            prime = False # if there's a divisor, the boolean value gets flipped to False\n",
     "    if prime: # if prime is still True after going through all numbers from 1 - 100, then it gets printed\n",
     "        l.append(num) \n",
-    "print l[::3]"
+    "print l[::2]"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# Extra Credit: Can you write a procedure that runs faster than the one above?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "l = ()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
